# crsm

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
docs/: requirements.md
src/crsm/: __main__.py  catalog.py  config.py  db.py  library.py  logging_utils.py  repo.py  s3.py
src/crsm/cli/: app.py
src/crsm/cli/commands/: add.py  db.py  doctor.py  live.py  ls.py  open.py  play.py  rm.py  thumbnail.py
src/docs/: architecture.md  product-overview.md  requirements.md
src/tests/: conftest.py
src/tests/cli/: test_add.py  test_db.py  test_doctor.py  test_live.py  test_ls.py  test_open.py  test_play.py  test_rm.py  test_thumbnail.py
src/tests/integration/: test_end_to_end.py
src/tests/unit/: test_catalog.py  test_config.py  test_library.py  test_repo.py  test_s3.py
